[package]
authors = ["poma <semenov.roman@mail.ru>"]
categories = ["wasm"]
description = "Pedersen hash preimage proof demo on bellman"
license = "Apache-2.0/MIT"
name = "pedersen-demo"
readme = "./README.md"
repository = "https://github.com/poma/wasm-bellman"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.40"
rand = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

web-sys = { version = "0.3", features = ["console"]}

bellman = { git = 'https://github.com/poma/bellman', default-features = false, features = ["wasm"] }
sapling-crypto = { git = 'https://github.com/poma/sapling-crypto', default-features = false }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"